demo/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "metadata": {
                "description": "Location of the resources"
            },
            "defaultValue": "[resourceGroup().location]"
        },
        "vNet1Name": {
            "type": "string",
            "defaultValue": "vNet1",
            "metadata": {
                "description": "Name for vNet 1"
            }
        },
        "vNet2Name": {
            "type": "string",
            "defaultValue": "vNet2",
            "metadata": {
                "description": "Name for vNet 2"
            }
        },
        "windowsVM1": {
           "type": "string",
           "metadata": {
                "description": "Name of the vm1"
            }
        },
        "windowsVM2": {
           "type": "string",
           "metadata": {
                "description": "Name of the vm2"
            }
        },
        "adminUsername": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        },
        "adminPassword": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        }
    },
    "variables": {
        "vNet1": {
            "addressSpacePrefix": "10.0.0.0/24",
            "subnetName": "subnet1",
            "subnetPrefix": "10.0.0.0/24"
        },
        "vNet2": {
            "addressSpacePrefix": "192.168.0.0/24",
            "subnetName": "subnet1",
            "subnetPrefix": "192.168.0.0/24"
        },
        "vNet1tovNet2PeeringName": "[concat(parameters('vNet1Name'), '-', parameters('vNet2Name'))]",
        "vNet2tovNet1PeeringName": "[concat(parameters('vNet2Name'), '-', parameters('vNet1Name'))]",
        "storageaccount1": "vm1sa9863574123",
        "PublicIP1": "vm1pubip",
        "Networksecuritygroup1": "vm1nsg",
        "NetworkInterface1": "vm1nic",
        "Networksecuritygroup2": "vm2nsg",
        "NetworkInterface2": "vm2nic"
    },
    "resources": [
        {
            "apiVersion": "2020-05-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('vNet1Name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Networksecuritygroup1'))]"
            ],
            "comments": "This is the first vNet",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vNet1').addressSpacePrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('vNet1').subnetName]",
                        "properties": {
                            "addressPrefix": "[variables('vNet1').subnetPrefix]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Networksecuritygroup1'))]"
                            }
                        }
                    }
                ]
            },
            "resources": [
                {
                    "apiVersion": "2020-05-01",
                    "type": "virtualNetworkPeerings",
                    "name": "[variables('vNet1tovNet2PeeringName')]",
                    "location": "[parameters('location')]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Network/virtualNetworks/', parameters('vNet1Name'))]",
                        "[resourceId('Microsoft.Network/virtualNetworks/', parameters('vNet2Name'))]"
                    ],
                    "comments": "This is the peering from vNet 1 to vNet 2",
                    "properties": {
                        "allowVirtualNetworkAccess": true,
                        "allowForwardedTraffic": false,
                        "allowGatewayTransit": false,
                        "useRemoteGateways": false,
                        "remoteVirtualNetwork": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks',parameters('vNet2Name'))]"
                        }
                    }
                }
            ]
        },
        {
            "apiVersion": "2020-05-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('vNet2Name')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Networksecuritygroup2'))]"
            ],
            "comments": "This is the second vNet",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vNet2').addressSpacePrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('vNet2').subnetName]",
                        "properties": {
                            "addressPrefix": "[variables('vNet2').subnetPrefix]",
                              "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('Networksecuritygroup2'))]"
                            }
                        }
                    }
                ]
            },
            "resources": [
                {
                    "apiVersion": "2020-05-01",
                    "type": "virtualNetworkPeerings",
                    "name": "[variables('vNet2tovNet1PeeringName')]",
                    "location": "[parameters('location')]",
                    "dependsOn": [
                        "[resourceId('Microsoft.Network/virtualNetworks/', parameters('vNet1Name'))]",
                        "[resourceId('Microsoft.Network/virtualNetworks/', parameters('vNet2Name'))]"
                    ],
                    "comments": "This is the peering from vNet 2 to vNet 1",
                    "properties": {
                        "allowVirtualNetworkAccess": true,
                        "allowForwardedTraffic": false,
                        "allowGatewayTransit": false,
                        "useRemoteGateways": false,
                        "remoteVirtualNetwork": {
                            "id": "[resourceId('Microsoft.Network/virtualNetworks',parameters('vNet1Name'))]"
                        }
                    }
                }
            ]
        },
        {
            "name": "[toLower(variables('storageaccount1'))]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-06-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "dev"
            },
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage"
        },
        {
            "name": "[variables('PublicIP1')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "dev"
            },
            "properties": {
                "publicIPAllocationMethod": "static",
                "dnsSettings": {
                    "domainNameLabel": "[toLower('vm1dnslabel')]"
                }
            }
        },
        {
            "name": "[variables('Networksecuritygroup1')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "nsgRule1",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('NetworkInterface1')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('PublicIP1'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vNet1Name'))]"
            ],
            "tags": {
                "displayName": "dev"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('PublicIP1'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vNet1Name'), variables('vNet1').subnetName)]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('windowsVM1')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', toLower(variables('storageaccount1')))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('NetworkInterface1'))]"
            ],
            "tags": {
                "displayName": "dev"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "osProfile": {
                    "computerName": "[parameters('windowsVM1')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "windowsVM1OSDisk1",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('NetworkInterface1'))]"
                        }
                    ]
                }              
            }
        },
        {
            "name": "[variables('Networksecuritygroup2')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "nsgRule1",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('NetworkInterface2')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vNet2Name'))]"
            ],
            "tags": {
                "displayName": "windowsVM1 Network Interface"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vNet2Name'), variables('vNet2').subnetName)]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('windowsVM2')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', toLower(variables('storageaccount1')))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('NetworkInterface2'))]"
            ],
            "tags": {
                "displayName": "dev"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "osProfile": {
                    "computerName": "[parameters('windowsVM2')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "windowsVM1OSDisk2",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('NetworkInterface2'))]"
                        }
                    ]
                }               
            }
        }
    ]
}
